<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/set_start_point"
        android:icon="@mipmap/ic_add_location_white_24dp"
        android:title="@string/set_start_point"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/set_end_point"
        android:icon="@mipmap/ic_call_split_white_24dp"
        android:title="@string/set_end_point"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/toggle_point_cloud"
        android:title="@string/toggle_pointcloud"/>

    <item
        android:id="@+id/toggle_floor_plan"
        android:title="@string/toogle_floor_plan"/>

    <item
        android:id="@+id/load_environment"
        android:title="@string/load_environment"/>

    <item
        android:id="@+id/clear_pois"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/clear_pois"/>

</menu>